manifests/istio/egress/destination-rule-recommendation-v1-v2-v3.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:

  name: recommendation

spec:
  host: recommendation
  subsets:
  - labels:
      version: v1
    name: version-v1
  - labels:
      version: v2
    name: version-v2
  - labels:
      version: v3
    name: version-v3
---
